--- a/client/src/App.css
+++ b/client/src/App.css
@@ -334,7 +334,7 @@ button {
 .landing {
   position: relative;
   background: url('./img/showcase.jpg') no-repeat center center/cover;
-  height: 100vh;
+  height: 55rem;
 }
 
 .landing-inner {
@@ -359,7 +359,6 @@ button {
   line-height: 1.8;
   margin-bottom: 1rem;
 }
-
 /* Profile Page */
 .profile-grid {
   display: grid;
